# tracking_boost

./: CMakeLists.txt  README.md  compile.sh  main.cpp  sortCompile.sh
include/ITSReconstruction/CA/: Cell.h  Cluster.h  Definitions.h  PrimaryVertexContext.h  Tracklet.h
include/ITSReconstruction/CA/gpu/: Context.h  KernelHeader.h  PrimaryVertexContext.h  StructGPUPrimaryVertex.h  Utils.h
include/ITSReconstruction/CA/openCl/: Utils.h
recipies/: sort-version.sh  tracking-itsu.sh
src/: CMakeLists.txt
src/CA/: Cell.cxx  PrimaryVertexContext.cxx  Tracker.cxx
src/CA/openCl/: Context.cpp  PrimaryVertexContext.cpp  Tracker.cpp  Utils.cpp
src/CA/openCl/kernel/: computeLayerCells.cl  computeLayerTracklets.cl  countLayerCells.cl  countLayerTracklets.cl
tracker/: CMakeLists.txt
tracker/include/ITSReconstruction/CA/: Cell.h  Cluster.h  Constants.h  Definitions.h  PrimaryVertexContext.h  Tracklet.h
tracker/include/ITSReconstruction/CA/gpu/: Context.h  PrimaryVertexContext.h  StructGPUPrimaryVertex.h  Utils.h
tracker/src/CA/: Cell.cxx  PrimaryVertexContext.cxx  Tracker.cxx
tracker/src/CA/openCl/: Context.cpp  PrimaryVertexContext.cpp  Tracker.cpp  Utils.cpp
tracker/src/CA/openCl/kernel/: computeLayerCells.cl  computeLayerTracklets.cl  countLayerCells.cl  countLayerTracklets.cl
valgrind_suppression/: generateValgrindSuppression.txt  suppressionV1.supp  valgrindScript.sh
